# quake-textures

./: .gitattributes  .gitignore  README.md  build-bump.py  build.py  build.sh  bump.yml  diffuse.yml  fromxcf.py  gloss.yml  glow.yml  images.yml  normal.py  pyproject.toml  requirements.txt  textures.yaml  textures.yml  xcftotexture.py  xcftotexture.yml
.github/: repo-card.xcf
gimpformats/: GimpChannel.py  GimpGbrBrush.py  GimpGgrGradient.py  GimpGihBrushSet.py  GimpGpbBrush.py  GimpGplPalette.py  GimpGtpToolPreset.py  GimpIOBase.py  GimpImageHierarchy.py  GimpImageLevel.py  GimpLayer.py  GimpParasites.py  GimpPatPattern.py  GimpPrecision.py  GimpVbrBrush.py  GimpVectors.py  __init__.py  gimpXcfDocument.py  utils.py
src/: #slime0.xcf  #slime1.xcf  *teleport.xcf  +0_box_side.xcf  +0_box_top.xcf  +0_med100.xcf  +0_med25.xcf  +0_med25s.xcf  +0basebtn.xcf  +0butn.xcf  +0button.xcf  +0floorsw.xcf  +0light01.xcf  +0mtlsw.xcf  +0planet.xcf  +0shoot.xcf  +0slip.xcf  +0slipbot.xcf  adoor0.xcf  adoor03.xcf  afloor1_3.xcf  afloor3_1.xcf  altar1_1.xcf  altar1_3.xcf  altar1_4.xcf  altar1_6.xcf  altar1_8.xcf  altarb.xcf  altarc_1.xcf  arch7.xcf  arrow_m.xcf  azfloor1_1.xcf  azwall3_1.xcf  basebutn3.xcf  batt.xcf  bricka2.xcf  button.xcf  carch02.xcf  carch03.xcf  carch04.xcf  (+165 more)
textures/bump/: #slime0.tga  +0_box_side.tga  +0_med100.tga  +0_med25.tga  +0_med25s.tga  +0basebtn.tga  +0mtlsw.tga  +0slip.tga  +0slipbot.tga  +0sliptop.tga  +abutton.tga  adoor01_2.tga  adoor02_2.tga  adoor03_3.tga  adoor09_1.tga  adoor_bars_1.tga  adoor_frame_1.tga  adoor_frame_2.tga  adoor_rivets_1.tga  (+222 more)
(+692 files in other folders)
